--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/BigTava/kusama-shield-verify#readme",
   "description": "",
   "dependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.9",
     "@parity/hardhat-polkadot": "^0.1.6"
   },
   "devDependencies": {
